objects/StoreConnect__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>All configurable settings for store connect</description>
    <fields>
        <fullName>Case_Status__c</fullName>
        <defaultValue>&quot;Closed&quot;</defaultValue>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <defaultValue>&quot;Store Connect Enquiry - &quot;</defaultValue>
        <label>Case Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <defaultValue>&quot;Question&quot;</defaultValue>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Password__c</fullName>
        <label>Login Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Username__c</fullName>
        <label>Login Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navbar_Border__c</fullName>
        <defaultValue>&quot;bb0000&quot;</defaultValue>
        <label>Navbar Border</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navbar_Bottom_Colour__c</fullName>
        <defaultValue>&quot;F80000&quot;</defaultValue>
        <inlineHelpText>HTML HEX colour for bottom part of gradient for navbar</inlineHelpText>
        <label>Navbar Bottom Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navbar_Default_Background_Colour__c</fullName>
        <defaultValue>&quot;fc9999&quot;</defaultValue>
        <label>Navbar Default Background Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navbar_Selected_Page__c</fullName>
        <defaultValue>&quot;DF0000&quot;</defaultValue>
        <label>Navbar Selected Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navbar_Text_Colour__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <label>Navbar Text Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navbar_Top_Colour__c</fullName>
        <defaultValue>&quot;F80000&quot;</defaultValue>
        <inlineHelpText>HTML HEX (i.e. #F80000) code for Navbar colour</inlineHelpText>
        <label>Navbar Top Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKB_Site_Name__c</fullName>
        <defaultValue>&quot;PKB2&quot;</defaultValue>
        <label>PKB Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_Record_Type__c</fullName>
        <defaultValue>&quot;Person Accounts&quot;</defaultValue>
        <label>Person Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Store Connect</label>
</CustomObject>